--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
     <div class="container">
         <!-- 헤더 -->
         <div class="header">
-            <div class="date">2025. 06. 14 SAT 2:00PM</div>
+            <div class="date">2026. 09. 19 SAT 12:10PM</div>
             <div class="title">결혼합니다</div>
-            <div class="names">신랑 <span class="heart">❤️</span> 신부</div>
+            <div class="names">주재현 <span class="heart">❤️</span> 서지혜</div>
             <div class="subtitle">두 사람이 하나 되는 날</div>
         </div>
 
@@ -329,18 +329,18 @@
             <div class="info-title">예식 일시 및 장소</div>
             <div class="info-item">
                 <div class="info-label">일시</div>
-                <div class="info-content">2025년 6월 14일 토요일 오후 2시</div>
+                <div class="info-content">2026년 9월 19일 토요일 오후 12시 10분</div>
             </div>
             <div class="info-item">
                 <div class="info-label">장소</div>
                 <div class="info-content">
-                    서울웨딩홀 3층 그랜드홀<br>
-                    서울시 강남구 테헤란로 123
+                    그레이스파티 신림 7층 단독홀<br>
+                    서울특별시 관악구 남부순환로 1440
                 </div>
             </div>
             <div class="info-item">
                 <div class="info-label">문의</div>
-                <div class="info-content">010-1234-5678 (신랑)<br>010-9876-5432 (신부)</div>
+                <div class="info-content">010-2898-0385 (신랑)<br>010-4763-8484 (신부)</div>
             </div>
         </div>
 
@@ -367,10 +367,10 @@
             <div class="contact-group">
                 <div class="contact-label">신랑측</div>
                 <div class="contact-buttons">
-                    <button class="contact-btn" onclick="callPhone('01012345678')">
+                    <button class="contact-btn" onclick="callPhone('01028980385')">
                         📞 신랑에게 전화
                     </button>
-                    <button class="contact-btn" onclick="sendSMS('01012345678')">
+                    <button class="contact-btn" onclick="sendSMS('01028980385')">
                         💬 문자 보내기
                     </button>
                 </div>
@@ -379,10 +379,10 @@
             <div class="contact-group">
                 <div class="contact-label">신부측</div>
                 <div class="contact-buttons">
-                    <button class="contact-btn" onclick="callPhone('01098765432')">
+                    <button class="contact-btn" onclick="callPhone('01047638484')">
                         📞 신부에게 전화
                     </button>
-                    <button class="contact-btn" onclick="sendSMS('01098765432')">
+                    <button class="contact-btn" onclick="sendSMS('01047638484')">
                         💬 문자 보내기
                     </button>
                 </div>
@@ -429,13 +429,13 @@
         // 카카오맵 열기
         function openKakaoMap() {
             // 실제 주소나 좌표로 변경하세요
-            window.open('https://map.kakao.com/link/map/서울웨딩홀,37.5012345,127.0398765', '_blank');
+            window.open('https://place.map.kakao.com/2098354524', '_blank');
         }
 
         // 네이버지도 열기
         function openNaverMap() {
             // 실제 주소나 좌표로 변경하세요
-            window.open('https://map.naver.com/v5/search/서울웨딩홀', '_blank');
+            window.open('https://map.naver.com/p/entry/place/1957191009?c=15.00,0,0,0,dh&placePath=/home?from=map&fromPanelNum=1&additionalHeight=76&timestamp=202512021551&locale=ko&svcName=map_pcv5', '_blank');
         }
 
         // 계좌번호 복사
