--- a/index.html
+++ b/index.html
@@ -314,13 +314,13 @@
         <!-- 인사말 -->
         <div class="greeting">
             <div class="greeting-text">
-                서로가 마주보며 다져온 사랑을<br>
-                이제 함께 한 곳을 바라보며<br>
-                걸어갈 수 있는 큰 사랑으로 키우고자 합니다.<br>
+                문구를 넣을 수 있단다<br>
+                문구를 넣을 수 있단다<br>
+                문구를 넣을 수 있단다<br>
                 <br>
-                저희 두 사람이 사랑의 이름으로<br>
-                지켜나갈 수 있도록<br>
-                앞날을 축복해 주시면 감사하겠습니다.
+                문구를 넣을 수 있단다<br>
+                문구를 넣을 수 있단다<br>
+                문구를 넣을 수 있단다
             </div>
         </div>
 
@@ -429,7 +429,7 @@
         // 카카오맵 열기
         function openKakaoMap() {
             // 실제 주소나 좌표로 변경하세요
-            window.open('https://place.map.kakao.com/2098354524', '_blank');
+            window.open('https://kko.kakao.com/yMNKNP9XFx', '_blank');
         }
 
         // 네이버지도 열기
