--- a/index.html
+++ b/index.html
@@ -421,10 +421,7 @@
                     
                     <!-- 플레이스홀더 (사진 준비되면 위 방식으로 교체) -->
                     <div class="slide">
-                        <div class="slide-placeholder">
-                            📷
-                            <div class="placeholder-text">첫 번째 사진</div>
-                        </div>
+                        <img src="images/photo1.jpg" alt="사진1">
                     </div>
                     <div class="slide">
                         <div class="slide-placeholder" style="background: linear-gradient(135deg, #f5c6aa 0%, #fce2d4 100%);">
