--- a/index.html
+++ b/index.html
@@ -489,8 +489,7 @@
         <!-- 지도 -->
         <div class="map-section">
             <div class="map-title">오시는 길</div>
-            <div class="map-placeholder">
-                🗺️ 여기에 지도가 표시됩니다
+            <img src="images/photo6.png" alt="오시는 길 약도" style="width:100%; border-radius:8px;">
             </div>
             <div class="map-buttons">
                 <button class="map-btn kakao-btn" onclick="openKakaoMap()">
